--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,6 +99,7 @@ h5 {
   font-size: 36px;
   font-weight: 400;
   font-family: "Shrikhand";
+  margin-top: 20px;
   margin-left: 0;
   margin-right: 0;
   border: none;
@@ -196,10 +197,25 @@ header {
   justify-content: space-around;
   height: 63px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+  background-color: white;
 }
 header img {
   width: 205px;
   margin: auto;
+}
+
+.conteneur-main-details header {
+  justify-content: flex-start;
+}
+.conteneur-main-details header img {
+  margin-left: calc(50% - 137px);
+}
+.conteneur-main-details header .fa-arrow-left {
+  display: block;
+  width: 42px;
+  color: #000;
+  transform: scale(1.414);
+  padding: 20px 23px;
 }
 
 .conteneur-main {
@@ -210,18 +226,16 @@ header img {
   left: 0;
   right: 0;
   z-index: 1;
-  animation: apparition 0s 2ms backwards;
+  animation: apparition 0s 1000ms backwards;
 }
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 762px) and (max-width: 992px) {
   .conteneur-main {
     max-width: 100%;
-    padding: 0 3.75vw;
   }
 }
 @media screen and (min-width: 992px) {
   .conteneur-main {
     max-width: 100%;
-    padding: 0 3.75vw;
   }
 }
 
@@ -240,7 +254,7 @@ main {
   align-content: space-around;
   width: 100%;
   gap: 20px;
-  animation: apparition 0s 2800ms forwards;
+  animation: apparition 0s 1000ms forwards;
   background-color: #F7F7F7;
   gap: 0;
 }
@@ -266,10 +280,9 @@ main {
   padding: 0;
   background: #F7F7F7;
 }
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 762px) and (max-width: 992px) {
   .conteneur-main-details {
     max-width: 100%;
-    padding: 0 3.75vw;
   }
 }
 @media screen and (min-width: 992px) {
@@ -323,7 +336,7 @@ main {
   left: 0;
   right: 0;
   z-index: 2;
-  animation: disparition 0s 2ms forwards;
+  animation: disparition 0s 1000ms forwards;
 }
 
 @keyframes disparition {
@@ -352,7 +365,7 @@ main {
   top: 9.5vh;
   left: 5vw;
   /*            animation: spin 1000ms backwards infinite ease-in-out alternate;*/
-  animation: spin 300ms backwards ease-in-out 1;
+  animation: spin 100ms backwards ease-in-out 1;
   animation-delay: 0ms;
   background-color: #99E2D0;
 }
@@ -371,8 +384,8 @@ main {
   top: 42.75vh;
   left: 14.859375vw;
   /*            animation: spin 1000ms backwards infinite ease-in-out alternate;*/
-  animation: spin 300ms backwards ease-in-out 1;
-  animation-delay: 300ms;
+  animation: spin 100ms backwards ease-in-out 1;
+  animation-delay: 100ms;
   background-color: #0E397F;
 }
 .lettre--3 {
@@ -390,8 +403,8 @@ main {
   top: 66.5vh;
   left: 24.6875vw;
   /*            animation: spin 1000ms backwards infinite ease-in-out alternate;*/
-  animation: spin 300ms backwards ease-in-out 1;
-  animation-delay: 600ms;
+  animation: spin 100ms backwards ease-in-out 1;
+  animation-delay: 200ms;
   background-color: #FF79DA;
 }
 .lettre--4 {
@@ -409,8 +422,8 @@ main {
   top: 80.75vh;
   left: 34.484375vw;
   /*            animation: spin 1000ms backwards infinite ease-in-out alternate;*/
-  animation: spin 300ms backwards ease-in-out 1;
-  animation-delay: 900ms;
+  animation: spin 100ms backwards ease-in-out 1;
+  animation-delay: 300ms;
   background-color: #9356DC;
 }
 .lettre--5 {
@@ -428,8 +441,8 @@ main {
   top: 85.5vh;
   left: 44.25vw;
   /*            animation: spin 1000ms backwards infinite ease-in-out alternate;*/
-  animation: spin 300ms backwards ease-in-out 1;
-  animation-delay: 1200ms;
+  animation: spin 100ms backwards ease-in-out 1;
+  animation-delay: 400ms;
   background-color: #ff0000;
 }
 .lettre--6 {
@@ -447,8 +460,8 @@ main {
   top: 80.75vh;
   left: 53.984375vw;
   /*            animation: spin 1000ms backwards infinite ease-in-out alternate;*/
-  animation: spin 300ms backwards ease-in-out 1;
-  animation-delay: 1500ms;
+  animation: spin 100ms backwards ease-in-out 1;
+  animation-delay: 500ms;
   background-color: #9356DC;
 }
 .lettre--7 {
@@ -466,8 +479,8 @@ main {
   top: 66.5vh;
   left: 63.6875vw;
   /*            animation: spin 1000ms backwards infinite ease-in-out alternate;*/
-  animation: spin 300ms backwards ease-in-out 1;
-  animation-delay: 1800ms;
+  animation: spin 100ms backwards ease-in-out 1;
+  animation-delay: 600ms;
   background-color: #FF79DA;
 }
 .lettre--8 {
@@ -485,8 +498,8 @@ main {
   top: 42.75vh;
   left: 73.359375vw;
   /*            animation: spin 1000ms backwards infinite ease-in-out alternate;*/
-  animation: spin 300ms backwards ease-in-out 1;
-  animation-delay: 2100ms;
+  animation: spin 100ms backwards ease-in-out 1;
+  animation-delay: 700ms;
   background-color: #0E397F;
 }
 .lettre--9 {
@@ -504,8 +517,8 @@ main {
   top: 9.5vh;
   left: 83vw;
   /*            animation: spin 1000ms backwards infinite ease-in-out alternate;*/
-  animation: spin 300ms backwards ease-in-out 1;
-  animation-delay: 2400ms;
+  animation: spin 100ms backwards ease-in-out 1;
+  animation-delay: 800ms;
   background-color: #99E2D0;
 }
 
@@ -526,7 +539,7 @@ main {
   align-content: space-around;
   width: 100%;
   gap: 20px;
-  height: 560px;
+  height: auto;
   padding-left: 30px;
   padding-right: 30px;
   padding-bottom: 120px;
@@ -535,6 +548,17 @@ main {
 @media screen and (min-width: 992px) {
   .fonctionnement {
     aspect-ratio: unset;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 80px;
+  }
+}
+@media screen and (min-width: 762px) and (max-width: 992px) {
+  .fonctionnement {
+    aspect-ratio: unset;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 80px;
   }
 }
 .fonctionnement h1 {
@@ -542,14 +566,16 @@ main {
   padding-top: 100px;
   padding-bottom: 50px;
 }
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 762px) and (max-width: 992px) {
   .fonctionnement h1 {
     text-align: center;
+    height: auto;
   }
 }
 @media screen and (min-width: 992px) {
   .fonctionnement h1 {
     text-align: center;
+    height: auto;
   }
 }
 
@@ -566,16 +592,18 @@ main {
   width: 100%;
   gap: 35px;
 }
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 762px) and (max-width: 992px) {
   .fonctionnement ul {
     flex-direction: row;
     justify-content: space-between;
+    gap: 0;
   }
 }
 @media screen and (min-width: 992px) {
   .fonctionnement ul {
     flex-direction: row;
     justify-content: space-between;
+    gap: 0;
   }
 }
 
@@ -596,7 +624,7 @@ main {
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
   transition: 0.3s;
 }
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 762px) and (max-width: 992px) {
   .fonctionnement ul li {
     width: 32%;
     font-size: 15px;
@@ -661,12 +689,20 @@ ul .chiffre {
 .fa-mobile-screen-button:hover, .fa-list:hover, .fa-store:hover {
   color: #9356DC;
 }
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 762px) and (max-width: 992px) {
   .fa-mobile-screen-button, .fa-list, .fa-store {
-    width: 22px;
+    width: 15px;
     position: relative;
     left: -10px;
-    padding: 15px 0px 15px 0px;
+    padding: 34px 0px 34px 0px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .fa-mobile-screen-button, .fa-list, .fa-store {
+    width: 15px;
+    position: relative;
+    left: -10px;
+    padding: 34px 2vw 34px 1vw;
   }
 }
 
@@ -678,7 +714,7 @@ ul .chiffre {
   width: 100%;
   gap: 20px;
   border-radius: 20px;
-  height: 1500px;
+  height: auto;
   gap: 25px;
   padding-left: 30px;
   padding-right: 30px;
@@ -691,7 +727,7 @@ ul .chiffre {
     aspect-ratio: unset;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 762px) and (max-width: 992px) {
   .restaurants {
     flex-direction: row;
     flex-wrap: wrap;
@@ -704,13 +740,15 @@ ul .chiffre {
   height: 217.5px;
   padding-top: 100px;
 }
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 762px) and (max-width: 992px) {
   .restaurants h1 {
+    width: 98%;
     text-align: center;
   }
 }
 @media screen and (min-width: 992px) {
   .restaurants h1 {
+    width: 98%;
     text-align: center;
   }
 }
@@ -738,7 +776,7 @@ ul .chiffre {
     width: 22%;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 762px) and (max-width: 992px) {
   .carte-restaurants {
     flex-direction: row;
     flex-wrap: wrap;
@@ -837,13 +875,6 @@ ul .chiffre {
   transform: scaleY(0);
 }
 
-.fa-arrow-left {
-  width: auto;
-  color: #000;
-  transform: scale(1.414);
-  padding: 20px 0 0 0;
-}
-
 .carte-menu {
   display: flex;
   flex-direction: column;
@@ -872,7 +903,11 @@ ul .chiffre {
   padding: 0px 0px 0px 0px;
   object-fit: cover;
 }
-
+@media screen and (min-width: 992px) {
+  .restaurant img {
+    aspect-ratio: 4.06;
+  }
+}
 .nom-restaurant {
   display: flex;
   flex-direction: column;
@@ -883,7 +918,6 @@ ul .chiffre {
   flex-direction: row;
   align-items: center;
   height: 100px;
-  gap: 30%;
   position: relative;
   top: -50px;
   background-color: #F7F7F7;
@@ -901,10 +935,10 @@ ul .chiffre {
   padding: 0 3% 0 3%;
   justify-content: center;
   align-items: flex-start;
-  gap: 10px;
+  gap: 40px;
   animation: delais 5s ease-in-out;
 }
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 762px) and (max-width: 992px) {
   .liste-menu {
     flex-direction: row;
     flex-wrap: wrap;
@@ -919,9 +953,8 @@ ul .chiffre {
 .menu {
   width: 100%;
   height: auto;
-  gap: 10px;
 }
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 762px) and (max-width: 992px) {
   .menu {
     width: 48%;
   }
@@ -933,11 +966,17 @@ ul .chiffre {
 }
 
 .partie-repas {
-  color: #353535;
+  font-family: "Roboto";
+  font-style: normal;
+  color: #000;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 19px;
+  text-transform: uppercase;
   align-self: self-start;
-  font-weight: 400;
-  border-bottom: 3px solid #99E2D0;
-  width: 40px;
+  padding-bottom: 10px;
+  border-bottom: 4px solid #99E2D0;
+  width: 50px;
 }
 
 .menu ul {
@@ -947,7 +986,7 @@ ul .chiffre {
   align-content: space-around;
   width: 100%;
   gap: 20px;
-  gap: 10px;
+  gap: 20px;
 }
 
 .liste-entrees {
@@ -957,7 +996,7 @@ ul .chiffre {
   align-content: space-around;
   width: 100%;
   gap: 20px;
-  margin-top: 20px;
+  margin-top: 15px;
 }
 
 .liste-entrees li {
@@ -970,12 +1009,12 @@ ul .chiffre {
   overflow: hidden;
   justify-content: space-around;
   display: block;
-  height: 90px;
+  height: 80px;
   align-items: flex-start;
   background-color: #fff;
   padding: 5px 15px 5px 15px;
-  border-radius: 15px;
-  box-shadow: 0 3px 5px 0 gray;
+  box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
+  border-radius: 15.0431px;
   transition: box-shadow 0.3s;
 }
 .liste-entrees li:hover .blockprix {
@@ -1190,7 +1229,7 @@ footer h3 {
     flex-direction: row;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 762px) and (max-width: 992px) {
   .container-footer {
     flex-direction: row;
   }
