--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -70,6 +70,7 @@ h5{
     font-size:36px;
     font-weight: 400;
     font-family:'Shrikhand';
+    margin-top:20px;
     margin-left: 0;
     margin-right: 0;
     border: none;
