--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,8 +4,22 @@ header {
     justify-content:space-around;
     height:63px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+    background-color: white;
     & img {
     width:205px;
     margin:auto;
     }
 }
+.conteneur-main-details header{
+    justify-content:flex-start; 
+    & img {
+    margin-left:calc(50% - 137px);
+    }
+    & .fa-arrow-left{
+        display:block;
+        width:42px;
+        color:$noir;
+        transform:scale(1.414);
+        padding: 20px 23px;
+        }
+    }
