--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,8 +145,10 @@ li h4 {
   transition: 0.3s;
 }
 .btn--1:hover {
-  background: linear-gradient(to bottom right, #ff9de4, #a674e2);
-  box-shadow: 0 6px 15px 0 #9356DC;
+  background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 25px;
+  transform: matrix(1, 0, 0, -1, 0, 0);
 }
 .btn--1 {
   width: 270px;
@@ -178,8 +180,10 @@ li h4 {
   transition: 0.3s;
 }
 .btn--2:hover {
-  background: linear-gradient(to bottom right, #ff9de4, #a674e2);
-  box-shadow: 0 6px 15px 0 #9356DC;
+  background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 25px;
+  transform: matrix(1, 0, 0, -1, 0, 0);
 }
 .btn--1 {
   width: 270px;
@@ -859,16 +863,16 @@ ul .chiffre {
   font-weight: 600;
   z-index: 1;
 }
+.fa-regular:hover + .carre, .fa-heart:hover + .carre {
+  z-index: 2;
+  transform: scaleY(0);
+}
 .fa-regular:active, .fa-heart:active {
   background: linear-gradient(#9356DC, #FF79DA);
   background-clip: text;
   color: transparent;
   font-weight: 600;
   z-index: 1;
-}
-.fa-regular:hover + .carre, .fa-heart:hover + .carre {
-  z-index: 2;
-  transform: scaleY(0);
 }
 .fa-regular:active + .carre, .fa-heart:active + .carre {
   z-index: 2;
@@ -1021,10 +1025,10 @@ ul .chiffre {
   transform: translate(-80px);
 }
 .liste-entrees li:hover .texte {
-  width: calc(100% - 100px);
+  width: calc(100% - 65px);
 }
 .liste-entrees li:hover h4 {
-  width: calc(100% - 100px);
+  width: calc(100% - 65px);
 }
 .liste-entrees li:hover .fa-check {
   transform: rotate(-360deg);
@@ -1109,7 +1113,7 @@ ul .chiffre {
 }
 
 .blocktexte h4 {
-  display: block;
+  display: inline-block;
   padding-top: 15px;
   height: 45px;
   white-space: nowrap;
@@ -1121,7 +1125,7 @@ ul .chiffre {
 }
 
 .blocktexte .texte {
-  display: block;
+  display: inline-block;
   color: #000;
   font-size: 18px;
   line-height: 18px;
