--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -20,8 +20,10 @@
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
     transition: 0.3s;
     &:hover{
-        background: linear-gradient(to bottom right,lighten($rose,7%),lighten($violet,7%));
-        box-shadow: 0 6px 15px 0 #9356DC;
+        background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+        border-radius: 25px;
+        transform: matrix(1, 0, 0, -1, 0, 0);
         }
         }
     &--1{
@@ -31,7 +33,7 @@
         margin-bottom: 70px;
     }
     &--2{
-        margin: 15px 15%;
-    }   
+        margin: 15px 15%; 
     }
+}
 }
