--- a/public/css/style.css
+++ b/public/css/style.css
@@ -856,14 +856,25 @@ ul .chiffre {
   left: 0;
   z-index: 2;
 }
-.fa-regular:hover, .fa-regular:active, .fa-heart:hover, .fa-heart:active {
+.fa-regular:hover, .fa-heart:hover {
   background: linear-gradient(#9356DC, #FF79DA);
   background-clip: text;
   color: transparent;
   font-weight: 600;
   z-index: 1;
 }
-.fa-regular:hover, .fa-regular:active + .carre, .fa-heart:hover, .fa-heart:active + .carre {
+.fa-regular:hover + .carre, .fa-heart:hover + .carre {
+  z-index: 2;
+  transform: scaleY(0);
+}
+.fa-regular:active, .fa-heart:active {
+  background: linear-gradient(#9356DC, #FF79DA);
+  background-clip: text;
+  color: transparent;
+  font-weight: 600;
+  z-index: 1;
+}
+.fa-regular:active + .carre, .fa-heart:active + .carre {
   z-index: 2;
   transform: scaleY(0);
 }
