--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -302,17 +302,28 @@ ul .chiffre{
     top:0;
     left:0; 
     z-index:2;      
-    &:hover,&:active{
+    &:hover{
         background:linear-gradient(#9356DC,#FF79DA);
         background-clip: text;
         color:transparent;
         font-weight: 600;
         z-index:1;
         }
-        &:hover,&:active + .carre{
+    &:hover + .carre{
         z-index:2;
         transform:scaleY(0);
         }  
+    &:active{
+        background:linear-gradient(#9356DC,#FF79DA);
+        background-clip: text;
+        color:transparent;
+        font-weight: 600;
+        z-index:1;
+        }
+    &:active + .carre{
+        z-index:2;
+        transform:scaleY(0);
+        }        
         }
 .carte-menu {
     @include flexbox;
