--- a/sass/layout/_form.scss
+++ b/sass/layout/_form.scss
@@ -12,7 +12,7 @@
 .fa-location-dot{
     width:12px;
     height:16px;
-    scale:1.25;
+    transform: scale(1.25);
     color:$gris;
 }
 .ville-input{
@@ -24,5 +24,4 @@
     color:$gris;
     text-align:left;
     border-style :none; 
-    background-color:none;
 }
