--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -143,7 +143,6 @@ ul img{
 ul text{
     display:inline-block;
     font-family:'Roboto';
-    font-style: bold;
     font-weight: 500;
     font-size:18px;
     line-height: 17px;
@@ -337,11 +336,11 @@ ul .chiffre{
 }
 .restaurant img {
     width:100%;
-    aspect-ratio:1.45;
+    aspect-ratio:1.45/1;
     padding:0px 0px 0px 0px;
     object-fit:cover;
     @include desktop{
-    aspect-ratio:4.06;
+    aspect-ratio:4.06/1;
        
     }
     @include tablette{
