--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,9 +3,16 @@ h1{
     text-align: center;
     height:117.5px;
     font-weight:800;
-    font-size: 29px;
-    line-height:29px;
+    font-size: 20px;
+    line-height:20px;
     padding:39.5px 0 10px 0;
+    @include tablette{
+        font-size: 29px;
+        line-height:29px;
+    }@include desktop{
+        font-size: 29px;
+        line-height:29px;
+}
 }
 h2{
     font-family:'Roboto';
@@ -89,4 +96,20 @@ li h4 {
     text-align: center;
     padding-top:32px;
     border:none;
+}
+h6{
+    display:inline-block;
+    font-family:'Roboto';
+    font-weight: 500;
+    font-size:18px;
+    line-height: 17px;
+    background-color: $violet;
+    color: #FFFFFF;
+    position:relative;
+    left:-15px;
+    width:30px;
+    height:30px;
+    padding:7px 10px;
+    border-radius:15px;
+    align-items: center;
 }
